--- a/public/complements/styles/secondary/profile/dashboard.css
+++ b/public/complements/styles/secondary/profile/dashboard.css
@@ -38,6 +38,30 @@
   src        : url("../../fonts/Ahsing/Ahsing-Regular.otf") format("truetype");
 }
 
+/* Estilos generales para las alertas */
+.alert {
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  text-align: center;
+  font-size: 1em;
+}
+
+/* Estilo para alertas de éxito */
+.alert-success {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+
+/* Estilo para alertas de error */
+.alert-error {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+}
+
 /* General */
 * {
   box-sizing : border-box;
@@ -75,10 +99,10 @@ body {
   border-bottom: 1px solid var(--color-grey);
 }
 
-.sidebar h2 {
-  font-size: 0.8em;
-  margin-bottom: 20px;
-  text-align: center;
+.sidebar .sidebar-icon {
+color: var(--color-secondary);
+border: none;
+font-size: 1.5em;
 }
 
 
@@ -130,17 +154,7 @@ body {
   pointer-events: none; /* Evita problemas de hover */
 }
 
-/* Iconos principales del sidebar */
-.sidebar h2 i {
-  color: var(--color-secondary);
-  font-size: 1.8em;
-  margin-bottom: 30px;
-  transition: color 0.3s ease;
-}
 
-.sidebar h2 i:hover {
-  color: var(--color-main);
-}
 
 /* Espaciado de la sección de comandos */
 .command-section {
@@ -167,37 +181,7 @@ padding: 10px;
   overflow-y: auto;
 }
 
-/* Alinear el header a la derecha */
-.main-content header {
-  display        : flex;
-  justify-content: flex-end;
 
-}
-
-.user-profile {
-  display       : flex;
-  align-items   : center;
-  margin-bottom : 20px;
-  padding-bottom: 10px;
-  margin-left   : auto;
-}
-
-.user-profile .user {
-  font-size       : 1.5em;
-  background-color: var(--color-semiblack);
-  padding         : 8px;
-  border          : 1px solid var(--color-light-grey);
-  border-radius   : 50%;
-  margin-right    : 10px;
-}
-
-/* Alinear el icono de configuración con margen */
-.user-profile .settings {
-  margin-left    : 10px;
-  font-size      : 1.5em;
-  text-decoration: none;
-  color          : var(--color-white);
-}
 
 /* Modal */
 .modal {
@@ -288,6 +272,7 @@ h2 {
 }
 
 .list-group-item {
+  margin-top: 10px;
   list-style      : none;
   border          : 1px solid var(--color-grey);
   border-radius   : 8px;
@@ -329,6 +314,7 @@ h2 {
 .content-wrapper {
   display: flex;
   gap    : 20px;
+  width: 100%;
 }
 
 .relative-container {
@@ -336,47 +322,55 @@ h2 {
   width   : 100%;
 }
 
-.wifi-section {
-  width           : 100%;
-  height          : 100%;
+/* Sección de WiFi */
+.wifi-section,
+.device-section {
+  width: 100%;
   background-color: var(--color-black);
-  border          : 1px solid var(--color-grey);
-  padding         : 20px;
-  border-radius   : 5px;
-  overflow-y      : auto;
-  transition      : border 0.5s ease;
-  /* Habilita el scroll vertical si el contenido sobrepasa la altura */
+  border: 1px solid var(--color-grey);
+  padding: 20px;
+  border-radius: 5px;
+  overflow-y: auto;
+  transition: border 0.5s ease;
+  text-align: center;
 }
 
-.wifi-section:hover {
+.wifi-section:hover,
+.device-section:hover {
   border: 1px solid var(--color-light-grey);
 }
 
-.wifi-section button {
-  padding         : 10px;
+/* Botones de ambas secciones */
+.wifi-section button,
+.device-section button {
+  padding: 10px;
   background-color: var(--color-semiblack);
-  color           : var(--color-white);
-  border          : 1px solid var(--color-grey);
-  border-radius   : 5px;
-  cursor          : pointer;
-  transition      : background-color 0.5s ease, border 0.5s ease;
+  color: var(--color-white);
+  border: 1px solid var(--color-grey);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s ease, border 0.5s ease;
 }
-
-.wifi-section button:hover {
+.wifi-section button:hover,
+.device-section button:hover {
   background-color: var(--color-semigrey);
-  border          : 1px solid var(--color-light-grey);
+  border: 1px solid var(--color-light-grey);
 }
 
-.wifi-section h2 {
-  text-align : center;
+/* Títulos de ambas secciones */
+.wifi-section h2,
+.device-section h2 {
   font-family: "neue-medium";
-  font-size  : 1.8em;
+  font-size: 1.8em;
   font-weight: lighter;
+  color: var(--color-white);
 }
 
-.wifi-section i {
-  font-size : 2em;
-  text-align: center;
+/* Iconos dentro del título */
+.wifi-section i,
+.device-section i {
+  font-size: 2em;
+  color: var(--color-secondary);
 }
 
 
@@ -414,16 +408,13 @@ h2 {
 
 .accordion-content {
   margin-top      : 10px;
-  display         : none;
+  display         : block;
   padding         : 10px;
   background-color: #444;
   color           : #fff;
   border-top      : 1px solid #555;
   max-height      : 150px;
   user-select     : none;
-  /* Altura máxima del acordeón desplegado */
-  overflow-y      : auto;
-  /* Agrega una barra de desplazamiento si el contenido es demasiado largo */
 }
 
 
@@ -434,4 +425,14 @@ h2 {
 .icon {
   margin-right: 10px;
   color       : var(--color-white);
+}
+
+input[type="submit"] {
+  padding         : 10px;
+  background-color: var(--color-semiblack);
+  color           : var(--color-white);
+  border          : 1px solid var(--color-grey);
+  border-radius   : 5px;
+  cursor          : pointer;
+  transition      : background-color 0.5s ease, border 0.5s ease;
 }
