--- a/public/complements/styles/secondary/profile/dashboard.css
+++ b/public/complements/styles/secondary/profile/dashboard.css
@@ -216,15 +216,39 @@ body.light-mode {
 
 /* Contenido del Modal */
 .modal-content {
-  background-color: #333;
-  color           : #fff;
+  font-family     : "neue";
+  font-size       : 1.1em;
+  font-weight     : lighter;
+  background-color: var(--color-black);
+  color           : var(--color-white);
+  border          : 1px solid var(--color-light-grey);
   margin          : 15% auto;
   padding         : 20px;
   border-radius   : 8px;
   width           : 80%;
   max-width       : 400px;
-  text-align      : center;
+  text-align      : left;
   user-select     : none;
+}
+
+.modal-content h2 {
+  font-family  : "neue-medium";
+  font-size    : 1.5em;
+  font-weight  : lighter;
+  margin-bottom: 10px;
+}
+
+.modal-content strong {
+  font-family  : "neue-medium";
+  font-weight  : lighter;
+  font-size    : 1.2em;
+  padding      : 5px;
+  border-radius: 10px;
+  transition   : color 0.3s ease, background-color 0.3s ease;
+}
+
+.modal-content p {
+  margin-bottom: 10px;
 }
 
 .dashboard {
@@ -849,16 +873,16 @@ body.light-mode {
 .password-section,
 .ip-section,
 .scan-section {
-  margin-top      : 1em;
-  max-height      : 45%;
+  margin-top: 1em;
+  max-height: 45%;
   /* Limita la altura a la mitad de la ventana */
-  overflow-y      : auto;
+
   /* Permite el scroll si el contenido supera el límite */
   width           : 32em;
   background-color: var(--color-light);
   color           : var(--color-black);
   border-radius   : 50px;
-  padding         : 20px;
+  padding         : 5px;
   display         : flex;
   flex-direction  : column;
   /* Cambiar a dirección de columna */
@@ -875,5 +899,6 @@ body.light-mode {
 
 /* Show content when section is expanded */
 .expanded .content {
+
   display: block;
 }
