finish css in dashboard with dark mode

--- a/public/complements/styles/secondary/profile/dashboard.css
+++ b/public/complements/styles/secondary/profile/dashboard.css
@@ -259,7 +259,7 @@ body.light-mode {
   gap                  : 20px;
   height               : 100vh;
   padding              : 20px;
-  background-color     : var(--color-dark);
+  background           : radial-gradient(circle, rgba(198, 21, 21, 0.245) 0%, #0c0b0b 65%);
   transition           : background-color 0.3s ease;
   user-select          : none;
 }
@@ -270,15 +270,15 @@ body.light-mode {
 
 /* Estilos para las tarjetas */
 .card-large {
-  max-height: 100vh;
+  max-height      : 100vh;
   /* Ajusta esto según tus necesidades */
-
   width           : 35em;
   grid-row        : 1 / 3;
   /* Ocupa ambas filas */
   grid-column     : 3;
+  border          : 1px solid var(--color-grey);
   /* Colocada en la segunda columna */
-  background-color: var(--color-semiblack);
+  background-color: var(--color-black);
   color           : var(--color-white);
   border-radius   : 50px;
   padding         : 20px;
@@ -287,7 +287,11 @@ body.light-mode {
   /* Cambiar a dirección de columna */
   align-items     : center;
   /* Alinear elementos al inicio */
-  transition      : background-color 0.3s ease, color 0.3s ease;
+  transition      : background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
+}
+
+.card-large:hover {
+  border: 1px solid var(--color-light-grey);
 }
 
 .light-mode .card-large {
@@ -297,14 +301,15 @@ body.light-mode {
 
 
 .wifi-section {
+
   margin-top      : 1em;
   max-height      : 45%;
   /* Limita la altura a la mitad de la ventana */
   overflow-y      : auto;
   /* Permite el scroll si el contenido supera el límite */
   width           : 32em;
-  background-color: var(--color-light);
-  color           : var(--color-black);
+  background-color: var(--color-semiblack);
+  color           : var(--color-white);
   border-radius   : 50px;
   padding         : 20px;
   display         : flex;
@@ -327,8 +332,8 @@ body.light-mode {
   overflow-y      : auto;
   /* Permite el scroll si el contenido supera el límite */
   width           : 32em;
-  background-color: var(--color-light);
-  color           : var(--color-black);
+  background-color: var(--color-semiblack);
+  color           : var(--color-white);
   border-radius   : 50px;
   padding         : 20px;
   display         : flex;
@@ -346,16 +351,15 @@ body.light-mode {
 
 
 .text-network {
-  font-family     : "neue-medium";
-  font-size       : 2.8em;
-  font-weight     : lighter;
-  margin-top      : 1em;
-  margin-bottom   : 10px;
-  background-color: var(--color-light);
-  color           : var(--color-black);
-  padding         : 10px;
-  border-radius   : 50px;
-  transition      : background-color 0.3s ease, color 0.3s ease;
+  font-family  : "neue-medium";
+  font-size    : 2.8em;
+  font-weight  : lighter;
+  margin-top   : 1em;
+  margin-bottom: 10px;
+  color        : var(--color-white);
+  padding      : 10px;
+  border-radius: 50px;
+  transition   : background-color 0.3s ease, color 0.3s ease;
 }
 
 .light-mode .text-network {
@@ -384,10 +388,10 @@ body.light-mode {
 .btn-primary {
   margin-top      : 15px;
   padding         : 8px 10px;
-  border          : 1px solid var(--color-black);
+  border          : 1px solid var(--color-grey);
   border-radius   : 50%;
-  background-color: var(--color-light);
-  color           : var(--color-black);
+  background-color: var(--color-black);
+  color           : var(--color-white);
   font-size       : 1.1em;
   cursor          : pointer;
   transition      : border 0.3s ease, background-color 0.3s ease, color 0.3s ease;
@@ -402,10 +406,10 @@ body.light-mode {
 .btn-secondary {
   margin-top      : 15px;
   padding         : 8px 10px;
-  border          : 1px solid var(--color-black);
+  border          : 1px solid var(--color-grey);
   border-radius   : 50%;
-  background-color: var(--color-light);
-  color           : var(--color-black);
+  background-color: var(--color-black);
+  color           : var(--color-white);
   font-size       : 1.1em;
   cursor          : pointer;
   transition      : border 0.3s ease, background-color 0.3s ease, color 0.3 ease;
@@ -419,8 +423,7 @@ body.light-mode {
 
 
 .btn-primary:hover {
-  background-color: var(--color-white);
-  border          : 1px solid var(--color-dark);
+  border: 1px solid var(--color-light-grey);
 }
 
 .light-mode .btn-primary:hover {
@@ -430,8 +433,7 @@ body.light-mode {
 }
 
 .btn-secondary:hover {
-  background-color: var(--color-white);
-  border          : 1px solid var(--color-dark);
+  border: 1px solid var(--color-light-grey);
 }
 
 .light-mode .btn-secondary:hover {
@@ -544,8 +546,9 @@ body.light-mode {
   display         : block;
   align-items     : center;
   justify-content : center;
-  transition      : color 0.3s ease, background-color 0.3s ease;
+  transition      : border 0.3s ease;
 }
+
 
 
 .light-mode .card-small {
@@ -555,13 +558,18 @@ body.light-mode {
 
 /* Posiciones específicas para las tarjetas pequeñas */
 .card-top {
-  background-color: var(--color-light);
-  color           : var(--color-black);
+  border          : 1px solid var(--color-grey);
+  background-color: var(--color-black);
+  color           : var(--color-white);
   grid-row        : 1;
   /* Primera fila */
   grid-column     : 1 / 3;
   /* Primera columna */
-  transition      : color 0.3s ease, background-color 0.3s ease;
+  transition      : color 0.3s ease, background-color 0.3s ease, border 0.3s ease;
+}
+
+.card-top:hover {
+  border: 1px solid var(--color-light-grey);
 }
 
 .light-mode .card-top {
@@ -592,20 +600,20 @@ body.light-mode {
 }
 
 .card-bottom-left {
+  border          : 10px solid transparent;
   background-color: var(--color-semiblack);
   color           : var(--color-white);
   grid-row        : 2;
   /* Segunda fila */
   grid-column     : 1;
   /* Primera columna */
-  width           : 100%;
   position        : relative;
   /* Importante para posicionamiento absoluto de la imagen */
   overflow        : hidden;
   /* Oculta cualquier desbordamiento */
-  border          : 10px solid transparent;
-  transition      : color 0.3s ease, background-color 0.3s ease;
+  transition      : border 0.3s ease;
 }
+
 
 .light-mode .card-bottom-left {
   background-color: var(--color-light-grey);
@@ -633,7 +641,8 @@ body.light-mode {
 }
 
 .card-bottom-right {
-  background-color: var(--color-secondary);
+  border          : 1px solid var(--color-grey);
+  background-color: var(--color-black);
   grid-row        : 2;
   /* Segunda fila */
   grid-column     : 2;
@@ -642,7 +651,11 @@ body.light-mode {
   flex-direction  : column;
   gap             : 20px;
   /* Espacio entre las secciones */
-  transition      : background-color 0.3s ease;
+  transition      : border 0.3 ease;
+}
+
+.card-bottom-right:hover {
+  border: 1px solid var(--color-light-grey);
 }
 
 .light-mode .card-bottom-right {
@@ -654,11 +667,9 @@ body.light-mode {
   font-size    : 2.5em;
   font-weight  : lighter;
   margin-bottom: 10px;
-
-  background-color: var(--color-black);
-  padding         : 10px;
-  border-radius   : 50px;
-  transition      : background-color 0.3s ease, color 0.3s ease;
+  padding      : 10px;
+  border-radius: 50px;
+  transition   : background-color 0.3s ease, color 0.3s ease;
 }
 
 .light-mode .text-information {
@@ -693,7 +704,7 @@ body.light-mode {
 
 .configuration {
   height          : 10em;
-  background-color: var(--color-black);
+  background-color: var(--color-semiblack);
   color           : var(--color-white);
   border-radius   : 30px;
   padding         : 20px;
@@ -717,8 +728,8 @@ body.light-mode {
 .last-network strong {
   font-family     : "neue-medium";
   font-weight     : lighter;
-  color           : var(--color-black);
-  background-color: var(--color-light);
+  color           : var(--color-white);
+  background-color: var(--color-black);
   padding         : 4px 8px;
   border-radius   : 10px;
   transition      : color 0.3s ease, background-color 0.3s ease;
@@ -741,7 +752,7 @@ body.light-mode {
 .last-network {
   height          : 17em;
   padding         : 20px;
-  background-color: var(--color-black);
+  background-color: var(--color-semiblack);
   color           : var(--color-white);
   border-radius   : 30px;
   font-family     : "neue";
@@ -795,7 +806,7 @@ body.light-mode {
 .alerts {
   height          : 100%;
   /* Ajusta la altura a la columna */
-  background-color: var(--color-black);
+  background-color: var(--color-semiblack);
   color           : var(--color-white);
   border-radius   : 30px;
   /* Asegura el borde redondeado */
